--- a/group/index.html
+++ b/group/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Cartoon Genre Finder</title>
+  <title>Blue Cross</title>
 </head>
 <body>
   <h1>flood asistance</h1>
@@ -13,6 +13,13 @@
   <input type="text" id="cartoon-search" placeholder="please enter your location">
   <button onclick="findLocation()">Search</button>
   <p id="genre-result"></p>
+  <div class="container">
+    <h2>floods in kenya</h2>
+    <p>This is some of the affected areas</p>
+    <img src="/group/road.jpeg" alt="images">
+    <img src="/group/floods.jpg" alt="images">
+  </div>
+  
 
   <script src="script.js"></script>
 </body>
